--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,12 @@ html *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    max-height: 100vh;
 }
 .img-background{
     background-image: url('halie-west-25xggax4bSA-unsplash.jpg');
     min-width: 40%;
-    height: 100vh;
+    max-height: 100vh;
     background-size: 100% 100%;
     position: relative;
 }
@@ -16,6 +17,16 @@ html *{
 }
 .container{
     display: flex;
+}
+.credit{
+    position: absolute;
+    color: white;
+    font-size: 12px;
+    bottom: 10px;
+    left: 15%;
+}
+.underline{
+    text-decoration: underline;
 }
 .logosection{
     position: absolute;
@@ -63,7 +74,7 @@ input, label{
     display: block;
     padding-top: 10px;
 }
-.form{
+.form, .foot{
     padding-left: 50px;;
 }
 .formheader{
@@ -76,12 +87,12 @@ input{
     border: 1px solid #E5E7EB;
     border-radius: 3px;
     width: 200px;
-    margin-top: 3px;
+    padding: 5px 0;
     text-indent: 10px;
 }
 label{
     letter-spacing: 1.5px;
-    margin-top: 3px;
+    margin: 3px 0;
 }
 .formcontainer{
     display: flex;
@@ -103,8 +114,26 @@ label{
 
 input[id="password"]:invalid, input[id="confirmpassword"]:invalid{
     border: none;
-    outline: 2px solid red;
+    outline: 1px solid red;
 }
 input[type="text"]:focus, input[type="email"]:focus, input[type="tel"]:focus{
     outline: 1px solid blue;
+}
+.passwordwarning{
+    padding: 2px 0 0 0;
+    color: red;
+}
+.createaccount{
+    padding: 15px 50px;
+    border-radius: 5px;
+    color: white;
+    background-color: #596D48;
+    border: #596D48;
+    margin-top: 30px;
+}
+.login{
+    color: #596D48;
+}
+.loginmsg{
+    margin-top: 25px;
 }
