--- a/styles.css
+++ b/styles.css
@@ -137,3 +137,6 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="tel"]:focus{
 .loginmsg{
     margin-top: 25px;
 }
+input[type="password"]:valid + .passwordwarning{
+    display: none;
+}
